<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tela_cadast"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back_cadastro">


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignBottom="@id/nome_comple"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp">

        <RadioButton
            android:id="@+id/tipo_paciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="16dp"
            android:background="@drawable/r_radio_selector"

            android:button="@android:color/white"
            android:elevation="4dp"
            android:fontFamily="@font/roboto_black"
            android:onClick="onRadioButtonClicked"
            android:padding="16dp"

            android:text="Responsável"
            android:textColor="@drawable/r_radio_text_color" />

        <RadioButton
            android:id="@+id/tipo_nutri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="16dp"
            android:background="@drawable/r_radio_selector"

            android:button="@android:color/white"
            android:elevation="4dp"
            android:fontFamily="@font/roboto_black"
            android:onClick="onRadioButtonClicked"
            android:padding="16dp"

            android:text="Nutricionista"
            android:textColor="@drawable/r_radio_text_color" />

    </RadioGroup>

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="323dp"
        android:layout_height="655dp"
        android:layout_centerInParent="true"
        android:background="@drawable/background_tela_inicial" />

    <ImageView
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_alignTop="@id/rectangle_1"
        android:layout_alignEnd="@id/rectangle_1"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/foto_estilo"
        android:src="@drawable/foto_paciente" />

    <TextView
        android:id="@+id/nome_comple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/rectangle_1"
        android:layout_alignTop="@id/rectangle_1"
        android:layout_marginStart="33dp"
        android:layout_marginTop="220dp"


        android:text="@string/nome_com"
        android:textAppearance="@style/nome_completo" />

    <EditText
        android:id="@+id/nome_completo"
        style="@style/edit_text_02"
        android:hint="Nome"
        android:layout_alignStart="@+id/nome_comple"
        android:layout_alignTop="@id/nome_comple"
        android:layout_marginTop="25dp"
        android:background="@drawable/estilo_edit_campo_cadastro"
        android:elevation="4dp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/nome_comple"
        android:layout_alignTop="@id/nome_completo"
        android:layout_marginTop="55dp"
        android:text="@string/email"
        android:textAppearance="@style/email" />

    <EditText
        android:id="@+id/email_barra"
        style="@style/edit_text_02"
        android:hint="E-mail"
        android:layout_alignStart="@+id/email"
        android:layout_alignTop="@id/email"
        android:layout_marginTop="25dp"
        android:background="@drawable/estilo_edit_campo_cadastro" />

    <TextView
        android:id="@+id/senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/email"
        android:layout_alignTop="@id/email_barra"
        android:layout_marginTop="55dp"
        android:text="@string/senha"
        android:textAppearance="@style/senha" />

    <EditText
        android:id="@+id/senha_barra"
        style="@style/edit_text_02"
        android:hint="Senha"
        android:layout_alignStart="@+id/senha"
        android:layout_alignTop="@id/senha"
        android:layout_marginTop="25dp"
        android:background="@drawable/estilo_edit_campo_cadastro" />

    <TextView
        android:id="@+id/confirme_su"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/senha_barra"
        android:layout_alignTop="@id/senha_barra"
        android:layout_marginTop="55dp"
        android:text="@string/confirme"
        android:textAppearance="@style/confirme_su"/>

    <EditText
        android:id="@+id/confirme_barra"
        style="@style/edit_text_02"
        android:hint="Senha"
        android:layout_alignStart="@+id/confirme_su"
        android:layout_alignTop="@id/confirme_su"
        android:layout_marginTop="25dp"
        android:background="@drawable/estilo_edit_campo_cadastro" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_finalizar"
        style="@style/botao_estilo_2"
        android:layout_alignTop="@id/confirme_barra"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:onClick="AddCadastro"
        android:text="@string/finalizar"
        android:textAppearance="@style/finalizar_text" />




</RelativeLayout>